--- a/paper/ref.bib
+++ b/paper/ref.bib
@@ -1,1 +1,8 @@
-@article
+@inproceedings{kreutz,
+	author = "Diego Kreutz and Fernando Ramos and Paulo Verissimo",
+	title = "Towards Secure and Dependable Software-Defined Networks",
+	booktitle = "Sigcomm",
+	year = "2013"
+	}
+
+
