--- a/paper/paper.tex
+++ b/paper/paper.tex
@@ -37,5 +37,6 @@ As SDN gains in popularity more people begin working on the problem of securing 
 
 
 \bibliographystyle{plain}
-\bibliography{ref)
+\bibliography{paper.bib}
 
+\end{document}
