--- a/paper/paper.tex
+++ b/paper/paper.tex
@@ -20,6 +20,12 @@ Software defined networks (SDN) provide network administrators the ability to ea
 
 \section{Introduction}
 
+\subsection{Software Defined Networking}
+
+
+
+\subsection{SDN Vulnerabilities}
+
 	Software defined networks present unique vulnerabilities due to the seperation between the data plane and the control plane. Such threats include exploiting the communication between the controller and network switches and the centralization of the control planes allows for the entire network to be from a single spot by an attacker \cite{kreutz}. As software defined networks become more popular, attackers will want to distinguish the difference between SDN and traditional networks prior to beginning their exploitation and attack. It then becomes beneficial for a network administrator to be able to detect such network fingerprinting attempts to prepare for and prevent future attacks. Through recent research conducted be Seungwon Shin and Guofei Gu \cite{Gu13} it is possible to distinguish a SDN from traditional networks based on packet return times for established flow rules and new flow rules. THe structure of reactionary SDNs pushes packets that do not currently fit a flow rule to the controller to establish a new flow rule before being forwarded on to its destination; this creares a delay in the packet flow process. If a second packet is sent through with matching headers it will match the new rule that was generated from the last packet, allowing it to flow without the additional time delay. Shin and Gu show that as this process is repeated changing a single value within the packet header, the differences between the return times can indicate the delay from flow rule generation and identify the target as a node within a software defined network.
 
 	There are many current solutions to the need for intrusion detection systems deployed on networks today. These intrusion detection systems can be broken down into two main categories of systems \cite{SANS}. The first is the Network Intrusion Detection System. These types of systems are employed at the network edge so that it is able to identify malicious traffic for the entire subnet. The other type of system is the Network Node Intrusion Detection System which function in the same way as the NIDS however it is placed on the end nodes of the network to identify malicious traffic going to a single host. Both of these systems are inadequate for identifying the Software Defined Network Scanner described by \cite{Gu13}. These systems utilize five main techniques to mitigate attack techniques \cite{CISCO}. The first is simple pattern matching, which examines the sequence of bytes contained within a packet. The second is Session Aware Pattern Matching. This takes simple pattern matching a step further by maintaining state information that allows the system the ability to interpret a complete conversation across multiple packets. These forms of pattern matching however are inadequate to identifying the scanning of SDNs. Another detection method is examining the context based signatures of a packet. Each form of network traffic has its own inherent vulnerabilities. By understanding the context of the conversation between machines the IDS can adjust the information that it looks for. This cannot effectively determine a SDN scan however because in the scan the packets themselves are the malicious part, not the data contained within them. This scan does not require any data to be included in the packets only single changes in the headers. The final two can be considered together for this overview. The first is Heuristic Analysis and the second is Traffic Anomaly analysis. Heuristic Analysis employs logical algorithms that determine the type of traffic traversing the network. With these algorithms developing a standard base overtime they identify deviations from the standard network statistics. Similarly Traffic Anomaly Analysis identifies deviations from a baseline; however these deviations are based on thresholds set on network traffic. These two methods also fall short in detecting the SDN scanner based on scope alone. These two methods require larger volumes of network traffic to be effective and the SDN scanner only requires two packets to be sent at a time. 
